[gd_scene load_steps=5 format=2]

[ext_resource path="res://Image/human_01.png" type="Texture" id=1]
[ext_resource path="res://text/time_test.gd" type="Script" id=2]
[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://text/Pause.gd" type="Script" id=4]

[node name="world" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="human_01" type="Sprite" parent="."]
position = Vector2( 669.364, 455.509 )
scale = Vector2( 0.443535, 0.443535 )
texture = ExtResource( 1 )

[node name="time_lable" type="Label" parent="."]
margin_left = 608.154
margin_top = 118.503
margin_right = 648.154
margin_bottom = 132.503
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="event" type="Label" parent="."]
margin_left = 608.54
margin_top = 150.2
margin_right = 648.54
margin_bottom = 164.2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "event"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 522.063
margin_top = 685.995
margin_right = 591.063
margin_bottom = 705.995
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 316.679
margin_top = 256.677
margin_right = 457.679
margin_bottom = 441.677
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_scale_lable" type="Label" parent="VBoxContainer"]
margin_right = 141.0
margin_bottom = 14.0

[node name="time-1" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 141.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
text = "1倍速"

[node name="time-5" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 141.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "5倍速"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.627451, 0.627451, 0.627451, 0.701961 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/time-1" to="." method="_on_time1_pressed"]
[connection signal="pressed" from="VBoxContainer/time-5" to="." method="_on_time5_pressed"]
